...
                }
            }
            Section {
                NavigationLink(
                    destination: HostsView(),
                    label: {
                        Label("Hosts", systemImage: "desktopcomputer")
                    })
                NavigationLink(
                    destination: SessionsView(),
                    label: {
                        Label("Terminals", systemImage: "terminal")
                        Spacer ()
...
                            .background(Color (.systemGray5))
                            .cornerRadius(3)
                            .foregroundColor(Color (.systemGray))
                    })
                NavigationLink(
                    destination: LocalTerminalPage()
                        .navigationTitle ("Local Terminal")
                        .navigationBarTitleDisplayMode (.inline),
                    label: {
                        Label("Local Terminal", systemImage: "ipad.landscape")
                    })
                NavigationLink(
                    destination: KeyManagementView(),
...
                    label: {
                        Label ("Snippets", systemImage: "note.text")
                    })
                NavigationLink(
                    destination: AiSettingsView(),
                    label: {
                        Label("AI", systemImage: "sparkles")
                    })
                NavigationLink(
                    destination: SettingsView(),
                    label: {
                        Label("Settings", systemImage: "gear")
                    })
...
